# Copyright 2026 Lincoln Institute of Land Policy
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "rise-mysql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pgedr>=0.2.0",
    "pygeoapi>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/cgs-earth/rise-mysql"
Repository = "https://github.com/cgs-earth/rise-mysql"

[tool.pytest.ini_options]
addopts = "--cov=pgedr"

[tool.ruff]
format.quote-style = "single"
line-length = 79
